# biotite

./: .gitignore  .travis.yml  CONTRIB.rst  README.rst  appveyor.yml  build.py  environment.yml  pyproject.toml  setup.py
.github/workflows/: bump_version.py  bump_version.yml
doc/: apidoc.py  conf.py  contribute.rst  extensions.rst  index.rst  install.rst  references.bib
doc/examples/scripts/sequence/: sw_genome_search.py
doc/examples/scripts/structure/6_modeling/: water_exchange_noexec.py
doc/static/: biotite.css  switcher.json
doc/tutorial/application/: index.rst
doc/tutorial/database/: index.rst
doc/tutorial/sequence/: index.rst
doc/tutorial/structure/: index.rst
src/biotite/: __init__.py
src/biotite/application/: localapp.py
src/biotite/application/dssp/: app.py
src/biotite/application/illustrate/: __init__.py  app.py
src/biotite/application/mmseqs/: __init__.py  search.py
src/biotite/application/openbabel/: __init__.py  draw.py
src/biotite/sequence/align/: __init__.py  kmertable.pyx  minimizer.pyx  permutation.py  permutation.pyx  selector.pyx  submer.pyx  subset.pyx
src/biotite/structure/: bonds.py  bonds.pyx
src/biotite/structure/io/gro/: file.py
src/biotite/structure/io/pdbx/: bcif.py
src/rust/sequence/align/: scoring.rs
src/rust/structure/: bonds.rs  mod.rs
tests/: test_version.py
tests/database/: test_rcsb.py
tests/sequence/align/: test_banded.py  test_kmertable.py  test_localgapped.py  test_minimizer.py  test_pairwise.py  test_permutation.py  test_selector.py  test_subset.py
tests/sequence/data/legacy_consistency/: README.rst  align_banded_0_2.fasta  align_banded_0_3.fasta  align_banded_0_4.fasta  align_banded_0_5.fasta  align_banded_0_6.fasta  align_banded_0_7.fasta  align_banded_0_8.fasta  align_banded_0_9.fasta  align_banded_1_3.fasta  align_banded_1_4.fasta  align_banded_1_5.fasta  align_banded_1_6.fasta  align_banded_1_7.fasta  align_banded_1_8.fasta  align_banded_1_9.fasta  align_banded_2_4.fasta  align_banded_2_5.fasta  align_banded_2_6.fasta  align_banded_2_7.fasta  align_banded_2_8.fasta  align_banded_2_9.fasta  align_banded_3_4.fasta  align_banded_3_5.fasta  align_banded_3_6.fasta  align_banded_3_7.fasta  align_banded_3_8.fasta  align_banded_3_9.fasta  align_banded_4_5.fasta  align_banded_4_6.fasta  align_banded_4_7.fasta  align_banded_4_8.fasta  align_banded_4_9.fasta  align_banded_5_6.fasta  align_banded_5_7.fasta  align_banded_5_8.fasta  align_banded_5_9.fasta  align_banded_6_7.fasta  align_banded_6_8.fasta  align_banded_6_9.fasta  (+91 more)
tests/structure/: test_bonds.py  test_gro.py
tests/structure/data/: 1gya.gro  1igy.gro  1l2y.gro  3o5r.gro  5h73.gro  5ugo.gro
